# OBSGameDetector

./: .gitignore  CMakeLists.txt  README.md  README.pt-BR.md  setup.iss
.github/workflows/: cmake-single-platform.yml
data/locale/: en-US.ini  pt-BR.ini
src/: ConfigManager.cpp  ConfigManager.h  GameDetector.cpp  GameDetector.h  GameDetectorDock.cpp  GameDetectorDock.h  GameDetectorSettingsDialog.cpp  GameDetectorSettingsDialog.h  TwitchAuthManager.cpp  TwitchChatBot.cpp  TwitchChatBot.h  plugin-main.cpp
